GENTBE-2742: Fixed corporation text overlaps follow links blocks in some cases.

--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -5,3 +5,7 @@
   @extend %clearfix;
   position: relative;
 }
+
+.site__footer__content {
+  min-height: 325px;
+}
